If no url given, yank from clipboard
This should mostly work. On WSL, i need both $DISPLAY set, as well as
x410 or another x-like running.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ name = "nasutil"
 version = "0.4.0"
 [dependencies]
 anyhow = "*"
+clipboard = "0.5.0"
 duct = "*"
 regex = "1.5.6"
 shellexpand = "*"
